--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,5 @@
 ## APP JWT AUTHENTICATION SECRET
 JWT_SECRET="my_jwt_secret"
 
-## DB CONFIGURATION
-DB_HOST="your_db_host"
-DB_PORT="your_db_port"
-DB_NAME="your_db_name"
-DB_USER="your_db_user"
-DB_PASS="your_db_pass"
+## APP TIMEZONE SETTING
+TIMEZONE="America/Sao_Paulo";
