chore: adding users seed

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
         "migrate:up": "pnpm typeorm:ts migration:run -d typeorm/data-source.ts",
         "migrate:down": "pnpm typeorm:ts migration:revert -d typeorm/data-source.ts",
         "clear:db": "pnpm typeorm:ts schema:drop -d typeorm/data-source.ts",
+        "seed:users": "tsx typeorm/seeds/users.seed.ts",
         "commit": "git-cz"
     },
     "dependencies": {
