docs: changing .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 ## APP JWT AUTHENTICATION SECRET
-JWT_SECRET="my_jwt_secret"
+JWT_SECRET=my_jwt_secret
 
 ## APP TIMEZONE SETTING
-TIMEZONE="America/Sao_Paulo";
+TIMEZONE=America/Sao_Paulo
