--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,12 @@
     "dependencies": {
         "@chakra-ui/react": "^3.20.0",
         "@emotion/react": "^11.14.0",
+        "@hookform/resolvers": "^5.1.0",
+        "@tabler/icons-react": "^3.34.0",
         "@tanstack/react-query": "^5.80.6",
-        "@types/nprogress": "^0.2.3",
         "axios": "^1.9.0",
+        "js-cookie": "^3.0.5",
         "next": "15.3.3",
-        "nextjs-toploader": "^3.8.16",
-        "nprogress": "^0.2.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.57.0",
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@commitlint/config-conventional": "^19.8.1",
         "@eslint/eslintrc": "^3.3.1",
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^22.15.30",
         "@types/react": "^19.1.6",
         "@types/react-dom": "^19.1.6",
