feat: adding assessment dashboard page

--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.57.0",
+        "use-mask-input": "^3.4.2",
         "zod": "^3.25.56"
     },
     "devDependencies": {
