--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
     "version": "1.0.0",
     "scripts": {
         "dev": "tsx watch src/main.ts",
+        "build": "rimraf dist && tsc && tsc-alias",
+        "start": "node dist/main.js",
         "typeorm:ts": "tsx -r tsconfig-paths/register node_modules/typeorm/cli.js",
         "migrate:up": "pnpm typeorm:ts migration:run -d typeorm/data-source.ts",
         "migrate:down": "pnpm typeorm:ts migration:revert -d typeorm/data-source.ts",
@@ -35,6 +37,8 @@
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^9.28.0",
         "globals": "^16.2.0",
+        "rimraf": "^6.0.1",
+        "tsc-alias": "^1.8.16",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.4",
         "typescript": "^5.8.3",
